[FIX] website: adapt dynamic snippet size when 1 elt is fetched
Prior to this this commit, when a single element was fetched in the
dynamic snippet, it took the entire width and became too tall according
to the page height. (e.g. Products or Appointments snippet)

To limit the height of this snippet, this commit forces the same size to
be used as when two elements are fetched.

task-4215773

--- a/addons/website/static/src/snippets/s_dynamic_snippet/000.scss
+++ b/addons/website/static/src/snippets/s_dynamic_snippet/000.scss
@@ -46,4 +46,13 @@
             }
         }
     }
+
+    .dynamic_snippet_template .col-12:not(:has(.o_template_product_product_banner)) {
+    // When a single element has been fetched, it takes up the entire width and becomes
+    // too tall according to the page height.
+    // This forces the same size to be used as when two elements are fetched.
+        @include media-breakpoint-up(lg) {
+            max-width: 50%;
+        }
+    }
 }
